--- a/travel_layout/styles/sections/_footer.scss
+++ b/travel_layout/styles/sections/_footer.scss
@@ -5,8 +5,9 @@
   background-color: $grey-transparent;
 
   &__content-container {
-    height: 270px;
+    min-height: 270px;
     padding-top: 80px;
+    padding-bottom: 52px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +41,6 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding-bottom: 52px;
 
     i {
       font-size: 16px;
