--- a/travel_layout/styles/sections/_how-it-works.scss
+++ b/travel_layout/styles/sections/_how-it-works.scss
@@ -19,10 +19,6 @@
     width: 100%;
     margin: 0 86px;
 
-    @media screen and (max-width: $breakpoint-up-sm) {
-      margin: 42px;
-    }
-
     @media screen and (max-width: $breakpoint-up-xxs) {
       flex-direction: column;
       align-items: center;
